# host-solo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
config/: hostsolo.example.yaml
config/directus/: env.example
hostsolo/: __init__.py  cli.py  config.py
hostsolo/commands/: __init__.py  backup.py  deploy.py  dns.py  env.py  proxy.py  status.py
hostsolo/providers/: __init__.py
hostsolo/providers/backup/: __init__.py  base.py  s3.py
hostsolo/providers/dns/: __init__.py  base.py  dnsimple.py
hostsolo/templates/: __init__.py
hostsolo/templates/app/: docker-compose.yml.j2
hostsolo/templates/traefik/: docker-compose.yml.j2
scripts/: setup-vps.sh
tests/: __init__.py  conftest.py  test_backup.py  test_cli.py  test_config.py  test_deploy.py  test_dns.py  test_dnsimple_provider.py  test_env.py  test_proxy.py  test_s3_provider.py  test_status.py  test_templates.py
